assets/scss/breakpoints/_481up.scss
/******************************************************************
Site Name:
Author:

Stylesheet: 481px and Up Stylesheet

This stylesheet is loaded for larger devices. It's set to
481px because at 480px it would load on a landscaped iPhone.
This isn't ideal because then you would be loading all those
extra styles on that same mobile connection.

A word of warning. This size COULD be a larger mobile device,
so you still want to keep it pretty light and simply expand
upon your base.scss styles.

******************************************************************/

/*
IMPORTANT NOTE ABOUT SASS 3.3 & UP
You can't use @extend within media queries
anymore, so just be aware that if you drop
them in here, they won't work.
*/

/*********************
HEADER STYLES
*********************/
#logo {
	a {
    background-size: initial;
    height: 61px;
    width: 300px;
	}
}

// Map

#vmap {
  height: 450px;
}

/*********************
POSTS & CONTENT STYLES
*********************/

/* entry content */
.entry-content {


	/* at this larger size, we can start to align images */
	.alignleft, img.alignleft {
		margin-right: 1.5em;
		display: inline;
		float: left;
	}
	.alignright, img.alignright {
		margin-left: 1.5em;
		display: inline;
		float: right;
	}
	.aligncenter, img.aligncenter {
		margin-right: auto;
		margin-left: auto;
		display: block;
		clear: both;
	}

} /* end .entry-content */

/*********************
FOOTER STYLES
*********************/

/*
check your menus here. do they look good?
do they need tweaking?
*/
.footer-links {
	ul {
		li {}
	}
} /* end .footer-links */

.vote-info {
	.state {
    h4 {
      margin-bottom: 15px;
    }
    .action-info {
    }
    .resources {
      margin-top: 0;
      p {
        &:after {
          border-bottom: 3px solid black(0.15);
          content: '';
          display: block;
          margin: 0 auto;
          padding-bottom: 5px;
          width: 50%;
        }
      }
      div {
        &:last-child {
          p {
            &:after {
              display: none;
            }
          }
        }
      }
    }
    .ui-btn {
      text-align: center;
    }
    &.other {
      .ui-btn {
        font-size: 24px;
      }
    }
	}
  .gaunit {
    float: right;
    height: 250px;
    width: 300px;
  }
}

.map-intro {
	.explanations {
		li {
			font-size: 20px;
		}
	}
	.legend {
		margin: 20px auto 0;
		li {
			font-size: 22px;
		}
	}
}

.state-wrapper {
  max-width: 90%;
}

#crestashareicon {
	text-align: center;
	.sbutton {
		margin: 0 5px;
	}
	.vfb-like {
		left: 25px;
		right: auto;
	}
}

